Fix shortMessage and Javadoc for Path.of() in hardcoded-path rule
The shortMessage for Paths.get()/Path.of() detections always said
"passed to Paths.get()" even when the call was Path.of(). Use the
existing apiName variable ("Paths.get" or "Path.of") in the message.
Also update the class-level Javadoc to list Path.of() alongside
Paths.get() and new File().